# wirespec

./: .gitignore  Cargo.toml  LICENCE  README.md  RELEASE_NOTES_v0.2.0.md
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  fuzz.yml  publish.yml
crates/wirespec-backend-api/: Cargo.toml  README.md
crates/wirespec-backend-api/src/: lib.rs
crates/wirespec-backend-api/tests/: api_tests.rs
crates/wirespec-backend-c/: Cargo.toml  README.md
crates/wirespec-backend-c/src/: checksum_binding.rs  expr.rs  header.rs  lib.rs  names.rs  parse_emit.rs  serialize_emit.rs  source.rs  type_map.rs
crates/wirespec-backend-c/tests/: codegen_tests.rs  names_tests.rs
crates/wirespec-backend-rust/: Cargo.toml  README.md
crates/wirespec-backend-rust/src/: checksum_binding.rs  emit.rs  expr.rs  lib.rs  names.rs  parse_emit.rs  serialize_emit.rs  type_map.rs
crates/wirespec-backend-rust/tests/: asn1_codegen_tests.rs  codegen_tests.rs
crates/wirespec-backend-tlaplus/: Cargo.toml  README.md
crates/wirespec-backend-tlaplus/src/: emit.rs  lib.rs  tlc_result.rs
crates/wirespec-codec/: Cargo.toml  README.md
crates/wirespec-codec/src/: checksum.rs  ir.rs  lib.rs  lower.rs  strategy.rs
crates/wirespec-codec/tests/: codec_tests.rs  corpus_codec_tests.rs  production_tests.rs  strategy_tests.rs
crates/wirespec-driver/: Cargo.toml  README.md
crates/wirespec-driver/src/: asn1_compile.rs  cli.rs  driver.rs  lib.rs  pipeline.rs  resolve.rs
crates/wirespec-driver/tests/: asn1_compiler_tests.rs  asn1_error_tests.rs  asn1_integration_tests.rs  asn1_pipeline_tests.rs  cli_tests.rs  corpus_driver_tests.rs  differential_test.rs  driver_tests.rs  e2e_pipeline_tests.rs  gcc_verify_tests.rs  pipeline_tests.rs  production_e2e_tests.rs  resolve_tests.rs  roundtrip_tests.rs  rustc_verify_tests.rs  sm_dispatch_tests.rs
crates/wirespec-layout/: Cargo.toml  README.md
crates/wirespec-layout/src/: bitgroup.rs  ir.rs  lib.rs  lower.rs
crates/wirespec-layout/tests/: bitgroup_tests.rs  corpus_layout_tests.rs  lower_tests.rs  production_tests.rs
crates/wirespec-lsp/: Cargo.toml  README.md
crates/wirespec-lsp/src/: ast_helpers.rs  backend.rs  completion.rs  diagnostics.rs  document_symbols.rs  goto_definition.rs  hover.rs  lib.rs  main.rs  position.rs  semantic_tokens.rs
crates/wirespec-rt/: Cargo.toml  README.md
crates/wirespec-rt/src/: lib.rs
crates/wirespec-rt/tests/: rt_tests.rs
crates/wirespec-sema/: Cargo.toml  README.md
crates/wirespec-sema/src/: analyzer.rs  checksum_catalog.rs  error.rs  expr.rs  ir.rs  lib.rs  profile.rs  resolve.rs  types.rs  validate.rs
crates/wirespec-sema/src/analyzer/: lower.rs  mod.rs  register.rs  validate.rs
crates/wirespec-sema/tests/: analyze_tests.rs  asn1_sema_tests.rs  bugfix_tests.rs  checksum_catalog_tests.rs  checksum_tests.rs  corpus_sema_tests.rs  error_display_tests.rs  error_tests.rs  production_tests.rs  sema_validation_extended_tests.rs  sema_validation_tests.rs  sm_static_analysis_tests.rs  spec_compliance_tests.rs  type_resolution_tests.rs  validation_tests.rs
crates/wirespec-syntax/: Cargo.toml  README.md
crates/wirespec-syntax/src/: ast.rs  lexer.rs  lib.rs  parser.rs  span.rs
crates/wirespec-syntax/tests/: asn1_parser_tests.rs  boundary_tests.rs  corpus_tests.rs  parser_tests.rs
docs/: CONTRIBUTING_BACKEND.md
docs/superpowers/plans/: 2026-03-27-wirespec-backend-api.md  2026-03-27-wirespec-codec.md  2026-03-27-wirespec-driver.md  2026-03-27-wirespec-layout.md  2026-03-27-wirespec-sema.md  2026-03-28-backend-codegen-gaps.md  2026-03-28-bugfix-all-crates.md  2026-03-28-checksum-registry.md  2026-03-28-cross-module-and-cli.md  2026-03-28-export-visibility.md  2026-03-28-fuzz-harness.md  2026-03-28-sema-validation.md  2026-03-28-wirespec-backend-c.md  2026-03-28-wirespec-backend-rust.md  2026-03-29-rust-backend-phase2.md  2026-03-29-sm-advanced-codegen.md
docs/superpowers/specs/: 2026-04-07-delegate-sm-tlaplus-design.md
examples/asn1/: etsi_its_cdd.asn1  lpp.asn1  lpp_transport.wspec  supl.asn1  supl_example.wspec  v2x_its.wspec
examples/ble/: att.wspec  l2cap.wire
examples/checksum/: capsule_checksum_test.wire  crc32_test.wspec  crc32c_test.wspec  fletcher16_test.wire  frame_checksum_test.wire
examples/ip/: ipv4.wspec
examples/mpquic/: array_sm.wire  connection.wspec  connection_full.wire  hierarchical.wspec  path.wire
examples/mqtt/: mqtt.wire
examples/net/: ethernet.wspec  tcp.wspec  udp.wire
examples/quic/: capsule_example.wire  frames.wspec  maxlen_test.wspec  varint.wspec
examples/test/: bits_groups.wire  bits_le.wspec
examples/tls/: tls13.wspec
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_parser.rs
runtime/: wirespec_runtime.h
src/: main.rs
tests/asn1/: test.asn1
tests/asn1c/: asn1c_wrapper.wspec  test_asn1c_roundtrip.sh  test_roundtrip.c  test_schema.asn1
tests/tlaplus/: test_deadlock.wspec  test_delegate_csc.wspec  test_delegate_indexed.wspec  test_delegate_simple.wspec  test_exclusive_guards.wspec  test_overlapping_guards.wspec  test_pathstate.wspec  test_safety_violation.wspec  test_unreachable_terminal.wspec
