[package]
name = "wirespec"
version = "0.4.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/wirespec-lang/wirespec"
homepage = "https://docs.wirespec.org"
keywords = ["protocol", "binary", "parser", "codegen", "tla"]
categories = ["compilers", "encoding", "parser-implementations"]
description = "Type-safe protocol description language — compiler, verifier, and LSP"
readme = "README.md"
include = ["src/", "LICENCE", "README.md"]

[[bin]]
name = "wirespec"
path = "src/main.rs"

[dependencies]
wirespec-driver = { version = "0.4.1", path = "crates/wirespec-driver" }

[workspace]
resolver = "2"
members = [
    "crates/wirespec-syntax",
    "crates/wirespec-sema",
    "crates/wirespec-layout",
    "crates/wirespec-codec",
    "crates/wirespec-backend-api",
    "crates/wirespec-backend-c",
    "crates/wirespec-backend-rust",
    "crates/wirespec-driver",
    "crates/wirespec-rt",
    "crates/wirespec-lsp",
    "crates/wirespec-backend-tlaplus",
]

[workspace.package]
version = "0.4.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/wirespec-lang/wirespec"
homepage = "https://docs.wirespec.org"
keywords = ["protocol", "binary", "parser", "codegen", "tla"]
categories = ["compilers", "encoding", "parser-implementations"]
