[package]
name = "wirespec-backend-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Backend trait and common lowering contracts for wirespec"
readme = "README.md"

[dependencies]
wirespec-codec = { version = "0.4.0", path = "../wirespec-codec" }
