[package]
name = "wirespec-backend-rust"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rust backend for wirespec"
readme = "README.md"

[dependencies]
wirespec-backend-api = { version = "0.4.0", path = "../wirespec-backend-api" }
wirespec-codec = { version = "0.4.0", path = "../wirespec-codec" }
wirespec-sema = { version = "0.4.0", path = "../wirespec-sema" }

[dev-dependencies]
wirespec-syntax = { version = "0.4.0", path = "../wirespec-syntax" }
wirespec-layout = { version = "0.4.0", path = "../wirespec-layout" }
