[package]
name = "wirespec-backend-tlaplus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "TLA+ code generation backend for wirespec state machines"
readme = "README.md"

[dependencies]
wirespec-sema = { version = "0.4.1", path = "../wirespec-sema" }

[dev-dependencies]
wirespec-syntax = { version = "0.4.1", path = "../wirespec-syntax" }
tla-checker = "0.3"
