[package]
name = "wirespec-codec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Backend-neutral Codec IR for wirespec"
readme = "README.md"

[dependencies]
wirespec-layout = { version = "0.4.2", path = "../wirespec-layout" }
wirespec-sema = { version = "0.4.2", path = "../wirespec-sema" }
wirespec-syntax = { version = "0.4.2", path = "../wirespec-syntax" }
