[package]
name = "wirespec-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Compilation driver and CLI for wirespec"

[[bin]]
name = "wirespec"
path = "src/bin/wirespec.rs"

[features]
asn1 = ["dep:rasn-compiler"]

[dependencies]
wirespec-syntax = { path = "../wirespec-syntax" }
wirespec-sema = { path = "../wirespec-sema" }
wirespec-layout = { path = "../wirespec-layout" }
wirespec-codec = { path = "../wirespec-codec" }
wirespec-backend-api = { path = "../wirespec-backend-api" }
wirespec-backend-c = { path = "../wirespec-backend-c" }
wirespec-backend-rust = { path = "../wirespec-backend-rust" }
rasn-compiler = { version = "0.16", optional = true }

[dev-dependencies]
tempfile = "3"
wirespec-rt = { path = "../wirespec-rt" }
