[package]
name = "wirespec-driver"
version = "0.4.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Compilation driver and CLI for wirespec"
readme = "README.md"

[features]
asn1 = ["dep:rasn-compiler"]

[dependencies]
wirespec-syntax = { version = "0.4.2", path = "../wirespec-syntax" }
wirespec-sema = { version = "0.4.2", path = "../wirespec-sema" }
wirespec-layout = { version = "0.4.2", path = "../wirespec-layout" }
wirespec-codec = { version = "0.4.2", path = "../wirespec-codec" }
wirespec-backend-api = { version = "0.4.2", path = "../wirespec-backend-api" }
wirespec-backend-c = { version = "0.4.2", path = "../wirespec-backend-c" }
wirespec-backend-rust = { version = "0.4.2", path = "../wirespec-backend-rust" }
wirespec-backend-tlaplus = { version = "0.4.2", path = "../wirespec-backend-tlaplus" }
rasn-compiler = { version = "0.16", optional = true }
tla-checker = "0.3.11"

[dev-dependencies]
tempfile = "3"
wirespec-rt = { version = "0.4.2", path = "../wirespec-rt" }
