[package]
name = "wirespec-layout"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Layout IR for wirespec"
readme = "README.md"

[dependencies]
wirespec-sema = { version = "0.4.2", path = "../wirespec-sema" }
wirespec-syntax = { version = "0.4.2", path = "../wirespec-syntax" }
