[package]
name = "wirespec-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Language Server Protocol server for wirespec"

[lib]
name = "wirespec_lsp"
path = "src/lib.rs"

[[bin]]
name = "wirespec-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
wirespec-syntax = { version = "0.3.0", path = "../wirespec-syntax" }
wirespec-sema = { version = "0.3.0", path = "../wirespec-sema" }
