[package]
name = "wirespec-sema"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Semantic analysis and Semantic IR for wirespec"
readme = "README.md"

[dependencies]
wirespec-syntax = { version = "0.4.1", path = "../wirespec-syntax" }
