[package]
name = "wirespec-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Parser and AST for the wirespec protocol description language"
readme = "README.md"
